# fastApi-todo

./: pyproject.toml  readme.txt
tests/: test_app.py
